--- a/pwa/index.html
+++ b/pwa/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#202124" />
   </head>
   <body>
+    <div class="container">
     <header>
       <h1>Markdown → Word (DOCX)</h1>
       <p class="subtitle">Zero-install, offline-capable PWA. Word-only focus.</p>
@@ -17,7 +18,7 @@
     <main>
       <section class="controls">
         <label for="markdownInput">Markdown / Text</label>
-        <textarea id="markdownInput" placeholder="Paste your markdown here..."></textarea>
+        <textarea id="markdownInput" class="editor" placeholder="Paste your markdown here..."></textarea>
 
          <div class="toggles">
           <label class="toggle">
@@ -27,8 +28,8 @@
         </div>
 
         <div class="actions">
-            <button id="convertBtn" aria-label="Convert markdown to DOCX">Convert to DOCX</button>
-            <input type="file" id="fileInput" aria-label="Upload markdown files" multiple accept=".md,.markdown,.txt" />
+          <button id="convertBtn" class="primary-button" aria-label="Convert markdown to DOCX">Convert to DOCX</button>
+          <input type="file" id="fileInput" class="btn-secondary" aria-label="Upload markdown files" multiple accept=".md,.markdown,.txt" />
         </div>
       </section>
 
@@ -50,6 +51,7 @@
     <footer>
       <small>PWA: offline after first load • No installs required</small>
     </footer>
+    </div>
 
     <script>
       // Service worker registration with live-reload support
