--- a/pwa/index.html
+++ b/pwa/index.html
@@ -50,6 +50,7 @@
 
     <footer>
       <small>PWA: offline after first load • No installs required</small>
+      <span class="version">v1.5.0</span>
     </footer>
     </div>
 
