Fix Mermaid toggle - add null check and enable by default (v1.6.1)

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -36,7 +36,7 @@
 
          <div class="toggles">
           <label class="toggle">
-            <input type="checkbox" id="mermaidToggle" />
+            <input type="checkbox" id="mermaidToggle" checked />
             <span>Render Mermaid diagrams (optional)</span>
           </label>
         </div>
@@ -72,7 +72,7 @@
 
     <footer>
       <small>PWA: offline after first load • No installs required</small>
-      <span class="version">v1.6.0</span>
+      <span class="version">v1.6.1</span>
     </footer>
     </div>
 
