Add visible release badge and bump cache version

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -72,7 +72,7 @@
 
     <footer>
       <small>PWA: offline after first load • No installs required</small>
-      <span class="version">v1.6.1</span>
+      <span id="versionBadge" class="version">loading…</span>
     </footer>
     </div>
 
